Updated website with new data

--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
 			<li><a href="http://elisa.bringwifiback.experimentslabs.com" target="_blank">elisa</a></li>
 			<li><a href="http://plouis.bringwifiback.experimentslabs.com" target="_blank">plouis</a></li>
 			<li><a href="http://christopher.bringwifiback.experimentslabs.com" target="_blank">christopher</a></li>
+			<li><a href="#" target="_blank">julien</a></li>
+			<li><a href="#" target="_blank">oceane</a></li>
 		</ul>
 		<h2>Projets</h2>
 		<ul class="project-list">
@@ -123,6 +125,15 @@
 					travailler en équipe et utiliser vagrant/git/ssh
 				</p>
 			</li>
+
+			<li>
+				<h3><a href="/hmmmtasty">Hmm... Tasty !</a></h3>
+				<p>
+					Jeu réalisé sur une demi-journée, en groupe,
+					pour utiliser git-flow
+				</p>
+			</li>
+
 		</ul>
 	</div>
 </body>
